incident - StopWorking()
